# dual

./: README.md  README.rst  pyproject.toml
dual/: __init__.py
src/dual/: __init__.py  dual.py
src/tests/: test_dual.py
tests/: test_dual.py
