[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`dual` is a package for dual problem."
homepage = "https://github.com/SaitoTsutomu/dual"
license = "Apache-2.0"
name = "dual"
readme = "README.md"
version = "0.2.0"

[tool.poetry.scripts]
dual = "dual:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
pytest = "^8.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
