[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = []
description = "`dual` is a package for dual problem."
license = {text = "Apache-2.0"}
name = "dual"
readme = "README.md"
requires-python = ">=3.11"
version = "0.3.2"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/dual"

[project.scripts]
dual = "dual:main"

[tool.uv]
dev-dependencies = [
  "jupyterlab>=4.3.4",
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN001", "ANN20", "CPY", "D1", "D2", "D4", "E501", "RUF039", "T201"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
